examples/test/testpolicy25.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy25
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key33: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value39
          key12: value47
          key15: value46
      podSelector:
        matchLabels:
          key17: value11
          key27: value49
          key31: value23
